--- a/generators/app/templates/dev/_index_dc.html
+++ b/generators/app/templates/dev/_index_dc.html
@@ -2,112 +2,99 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <title><%= bannerName %></title>
-    <!-- ad.size is not required for DoubleClick Rich media ads but is included because it is an unofficial standard -->
-    <meta name="ad.size" content="width=<%= actualBannerWidth %>,height=<%= actualBannerHeight %>">
-    <!-- Studio Enabler Required -->
-    <!-- this was updated to work on http or https by removing the protocal entirely -->
+    <head>
+        <title><%= bannerName %></title>
+        <!-- ad.size is not required for DoubleClick Rich media ads but is included because it is an unofficial standard -->
+        <meta name="ad.size" content="width=<%= actualBannerWidth %>,height=<%= actualBannerHeight %>">
+        <!-- Studio Enabler Required -->
+        <!-- this was updated to work on http or https by removing the protocal entirely -->
 
 
-   <!--
-    For offline use;
-    <script src="../offline/Enabler.js" type="text/javascript"></script>
+        <!--
+                    For offline use;
+                    <script src="../offline/Enabler.js" type="text/javascript"></script>
+        
+                     -->
 
-     -->
-
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <script src="//s0.2mdn.net/ads/studio/Enabler.js"></script>
-    <style type="text/css">
-    #container_ad {
-        display: none;
-        z-index: 20;
-    }
-    button {
-        background: none;
-        outline: 0;
-        border: 0;
-     }
-    </style>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <!--removeIf(production)-->
-    <style>
-        /* This CSS will be removed when packaging 
-        the banner for delivery. In development, 
-        it will center the banner in the browser window. 
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> <script src="//s0.2mdn.net/ads/studio/Enabler.js"></script>
+        <style type="text/css">
+            #container_ad{display:none;z-index:20}
+            button{background:none;outline:0;border:0}
+        </style>
+        <link
+        rel="stylesheet" type="text/css" href="style.css">
+        <!--removeIf(production)-->
+        <style>
+            /* This CSS will be removed when packaging
+        the banner for delivery. In development,
+        it will center the banner in the browser window.
         */
-        #container_ad {
-          top: 50vh;
-          left: 50vw;
-          transform: translate(-50%, -50%);
-        }
-    </style>
-    <!--endRemoveIf(production)-->
-    <script language="javascript">
-    // Initialize Enabler - DoubleClick referrs to this as the most
-    // important piece of code in your banner. If it's not here
-    // you don't have a DoubleClick ad
-    window.onload = function() {
-        if (Enabler.isInitialized()) {
-            init();
-        } else {
-            Enabler.addEventListener(studio.events.StudioEvent.INIT, init);
-        }
-    }
-    // init() will only be run once the Enabler is initialized
-    function init() {
-        // Enabler provides ways for us to check status of the page
-        // First, we'll check to be sure the page is loadedd
-        if (Enabler.isPageLoaded()) {
-            // the page is loaded, now call the page load handler
-            pageLoadedHandler();
-        } else {
-            Enabler.addEventListener(studio.events.StudioEvent.PAGE_LOADED, pageLoadedHandler);
-        }
-    }
-
-    function pageLoadedHandler() {
-        // we only want to run the ad if it's visible to the user
-        // and the Enabler let's us check if it is visible with the
-        // Enabler.isVisible property
-        if (Enabler.isVisible()) {
-            adVisibilityHandler();
-        } else {
-            Enabler.addEventListener(studio.events.StudioEvent.VISIBLE,
-                adVisibilityHandler);
-        }
-    }
-
-    // This _politeLoad function will load any number of
-    // JS files using the Enabler's built in loadScript
-    // function then it will issue a call back when done
-    // Where did it come from?
-    // http://greensock.com/forums/topic/12147-polite-loading-gsap-into-a-dc-html5-banner/
-    //
-    function _politeLoad(urls, onComplete) {
-        var l = urls.length,
-            loaded = 0,
-            checkProgress = function() {
-                if (++loaded === l && onComplete) {
-                    onComplete();
+            #container_ad{top:50vh;left:50vw;transform:translate(-50%, -50%)}
+        </style>
+        <!--endRemoveIf(production)-->
+        <script language="javascript">
+            // Initialize Enabler - DoubleClick referrs to this as the most
+            // important piece of code in your banner. If it's not here
+            // you don't have a DoubleClick ad
+            window.onload = function () {
+                if (Enabler.isInitialized()) {
+                    init();
+                } else {
+                    Enabler.addEventListener(studio.events.StudioEvent.INIT, init);
                 }
-            },
-            i;
-        for (i = 0; i < l; i++) {
-            Enabler.loadScript(urls[i], checkProgress);
-        }
-    }
+            };
+            // init() will only be run once the Enabler is initialized
+            function init() {
+                // Enabler provides ways for us to check status of the page
+                // First, we'll check to be sure the page is loadedd
+                if (Enabler.isPageLoaded()) { // the page is loaded, now call the page load handler
+                    pageLoadedHandler();
+                } else {
+                    Enabler.addEventListener(studio.events.StudioEvent.PAGE_LOADED, pageLoadedHandler);
+                }
+            }
 
-    function adVisibilityHandler() {
-    	// The ad is actual in a visible area, now we can
-        // finally start the banner
+            function pageLoadedHandler() {
+                // we only want to run the ad if it's visible to the user
+                // and the Enabler let's us check if it is visible with the
+                // Enabler.isVisible property
+                if (Enabler.isVisible()) {
+                    adVisibilityHandler();
+                } else {
+                    Enabler.addEventListener(studio.events.StudioEvent.VISIBLE, adVisibilityHandler);
+                }
+            }
 
-        /*
+            // This _politeLoad function will load any number of
+            // JS files using the Enabler's built in loadScript
+            // function then it will issue a call back when done
+            // Where did it come from?
+            // http://greensock.com/forums/topic/12147-polite-loading-gsap-into-a-dc-html5-banner/
+            //
+            function _politeLoad(urls, onComplete) {
+                var l = urls.length,
+                    loaded = 0,
+                    checkProgress = function () {
+                        if (++ loaded === l && onComplete) {
+                            onComplete();
+                        }
+                    },
+                    i;
+                for (i = 0; i < l; i = i + 1) {
+                    Enabler.loadScript(urls[i], checkProgress);
+                }
+            }
+
+            function adVisibilityHandler() {
+                // The ad is actual in a visible area, now we can
+                // finally start the banner
+
+                /*
 
         You can import files anyway you want, like from the Greensock CDN:
         https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js
 
-        Here are the docs for installing GSAP. 
+        Here are the docs for installing GSAP.
         https://greensock.com/docs/v3/Installation
 
 
@@ -124,35 +111,39 @@
         https://s0.2mdn.net/ads/studio/cached_libs/easeljs_0.8.2_937c3ec68021211c056f61c9ceaccffd_min.js
         */
 
-        // we'll feed these into the _politeLoad helper function
-        // and give it a callback, bannerInit which lives in the script.js file
-        // https://greensock.com/docs/v3/Installation
-        _politeLoad([
-            'https://s0.2mdn.net/ads/studio/cached_libs/gsap_3.0.1_min.js',
-            // 'https://s0.2mdn.net/ads/studio/cached_libs/easelplugin_3.0.1_min.js',
-            'script.js'
-        ], function() {
-            console.log('Banner is ready to be initialized.');
-            bannerInit();
-        });
+                // we'll feed these into the _politeLoad helper function
+                // and give it a callback, bannerInit which lives in the script.js file
+                // https://greensock.com/docs/v3/Installation
+                _politeLoad([
+                    'https://s0.2mdn.net/ads/studio/cached_libs/gsap_3.0.1_min.js',
+                    // 'https://s0.2mdn.net/ads/studio/cached_libs/easelplugin_3.0.1_min.js',
+                    'script.js'
+                ], function () {
+                    console.log('Banner is ready to be initialized.');
+                    bannerInit();
+                });
 
-        // The ad lives in the container_ad div. At the top of this
-        // page, it was made invisible, now we can change the opacity
-        // to 100% and be sure it's set to display as a block level element
-        document.getElementById("container_ad").style.opacity = 1;
-        document.getElementById("container_ad").style.display = "block";
-    }
-    </script>
-</head>
+                // The ad lives in the container_ad div. At the top of this
+                // page, it was made invisible, now we can change the opacity
+                // to 100% and be sure it's set to display as a block level element
+                document.getElementById("container_ad").style.opacity = 1;
+                document.getElementById("container_ad").style.display = "block";
+            }
+        </script>
+    </head>
 
-<body>
-    <div id="container_ad">
-        <div id="content_ad">
-            <!-- Your banner ad content goes here -->
-            <div id="remove-me">Build A Banner</div>
+    <body>
+        <div id="container_ad">
+            <div
+                id="content_ad">
+                <!-- Your banner ad content goes here -->
+                <div id="remove-me">
+                    <div>Build A Banner</div>
+                    <div>DoubleClick version</div>
+                </div>
+            </div>
+            <button id="background_exit_ad"></button>
         </div>
-        <button id="background_exit_ad"></button>
-    </div>
-</body>
+    </body>
 
 </html>
