--- a/generators/app/templates/dev/_index_nongoogle.html
+++ b/generators/app/templates/dev/_index_nongoogle.html
@@ -2,83 +2,71 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <title><%= bannerName %></title>
-    <meta name="ad.size" content="width=<%= actualBannerWidth %>,height=<%= actualBannerHeight %>">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <style type="text/css">
-    #container_ad {
-        z-index: 20;
-    }
-    button {
-        background: none;
-        outline: 0;
-        border: 0;
-     }
-    </style>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <!--removeIf(production)-->
-    <style>
-        /* This CSS will be removed when packaging 
-        the banner for delivery. In development, 
-        it will center the banner in the browser window. 
+    <head>
+        <title><%= bannerName %></title>
+        <meta name="ad.size" content="width=<%= actualBannerWidth %>,height=<%= actualBannerHeight %>">
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <style type="text/css">
+            #container_ad{z-index:20}
+            button{background:none;outline:0;border:0}
+        </style>
+        <link
+        rel="stylesheet" type="text/css" href="style.css">
+        <!--removeIf(production)-->
+        <style>
+            /* This CSS will be removed when packaging
+        the banner for delivery. In development,
+        it will center the banner in the browser window.
         */
-        #container_ad {
-          top: 50vh;
-          left: 50vw;
-          transform: translate(-50%, -50%);
-        }
-    </style>
-    <!--endRemoveIf(production)-->
+            #container_ad{top:50vh;left:50vw;transform:translate(-50%, -50%)}
+        </style>
+        <!--endRemoveIf(production)-->
 
-    <script language="javascript">
+        <script language="javascript">
 
-    function _politeLoad(urls, onComplete) {
-        var l = urls.length,
-            loaded = 0,
-            checkProgress = function() {
-                if (++loaded === l && onComplete) {
-                    onComplete();
+            function _politeLoad(urls, onComplete) {
+                var l = urls.length,
+                    loaded = 0,
+                    checkProgress = function () {
+                        if (++ loaded === l && onComplete) {
+                            onComplete();
+                        }
+                    },
+                    i;
+                for (i = 0; i < l; i = i + 1) {
+                    _loadScript(urls[i], checkProgress);
                 }
-            },
-            i;
-        for (i = 0; i < l; i++) {
-            _loadScript(urls[i], checkProgress);
-        }
-    }
+            }
 
-    function _loadScript(url, callback){
+            function _loadScript(url, callback) {
 
-        var script = document.createElement("script")
-        script.type = "text/javascript";
+                var script = document.createElement("script");
+                script.type = "text/javascript";
 
-        if (script.readyState){  //IE
-            script.onreadystatechange = function(){
-                if (script.readyState == "loaded" ||
-                        script.readyState == "complete"){
-                    script.onreadystatechange = null;
-                    callback();
-                }
-            };
-        } else {  //Others
-            script.onload = function(){
-                callback();
-            };
-        }
+                if (script.readyState) { // IE
+                    script.onreadystatechange = function () {
+                        if (script.readyState == "loaded" || script.readyState == "complete") {
+                            script.onreadystatechange = null;
+                            callback();
+                        }
+                    };
+                } else { // Others
+                    script.onload = function () {
+                        callback();
+                    };
+                } script.src = url;
+                document.getElementsByTagName("head")[0].appendChild(script);
+            }
 
-        script.src = url;
-        document.getElementsByTagName("head")[0].appendChild(script);
-    }
+            function pageLoadedHandler() {
+                // Now that the ad is actual in a visible area, let's start this party.
 
-    function pageLoadedHandler() {
-        // Now that the ad is actual in a visible area, let's start this party.
-        
-        /*
+                /*
 
         You can import files anyway you want, like from the Greensock CDN:
         https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js
 
-        Here are the docs for installing GSAP. 
+        Here are the docs for installing GSAP.
         https://greensock.com/docs/v3/Installation
 
         What are the other Google hosted libraries? See here:
@@ -94,80 +82,84 @@
         https://code.createjs.com/1.0.0/easeljs.min.js
         */
 
-        //now you can just feed stuff into that one function and give it a callback...
-        _politeLoad([
-            // 'https://code.createjs.com/1.0.0/preloadjs.min.js',
-            // 'https://code.createjs.com/1.0.0/easeljs.min.js',
-            'https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js',
-            'script.js'
-        ], function() {
-            console.log('bannerInit');
-            bannerInit();
+                // now you can just feed stuff into that one function and give it a callback...
+                _politeLoad([
+                    // 'https://code.createjs.com/1.0.0/preloadjs.min.js',
+                    // 'https://code.createjs.com/1.0.0/easeljs.min.js',
+                    'https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js',
+                    'script.js'
+                ], function () {
+                    console.log('bannerInit');
+                    bannerInit();
 
-            // if you want to preload images
-            // 1. remove the bannerInit() above
-            // 2. in the _politeLoad list of JS files above, be sure to load the preloadjs library
-            // 3. uncomment out the preloadImage() and related event listener functions below
-            // 4. in the loadManifest list out the images you want to preload before animation begins in your banner
-            //
-            // preloadImages()
-        });
+                    // if you want to preload images
+                    // 1. remove the bannerInit() above
+                    // 2. in the _politeLoad list of JS files above, be sure to load the preloadjs library
+                    // 3. uncomment out the preloadImage() and related event listener functions below
+                    // 4. in the loadManifest list out the images you want to preload before animation begins in your banner
+                    //
+                    // preloadImages()
+                });
 
-        // function preloadImages() {
-        //     console.log('preloadImages')
-        //     var queue = new createjs.LoadQueue();
-        //     queue.stopOnError = true;
-        //     // list the images you want to preload here
-        //     queue.loadManifest([
-        //         "myimage1.png",
-        //         "myimage2.jpg",
-        //     ]);
-        //     queue.on("complete", handleComplete, this);
-        //     queue.on("error", handleError, this);
-        //     queue.on("fileerror", handleFileError, this);
-        // }
+                // function preloadImages() {
+                //     console.log('preloadImages')
+                //     var queue = new createjs.LoadQueue();
+                //     queue.stopOnError = true;
+                //     // list the images you want to preload here
+                //     queue.loadManifest([
+                //         "myimage1.png",
+                //         "myimage2.jpg",
+                //     ]);
+                //     queue.on("complete", handleComplete, this);
+                //     queue.on("error", handleError, this);
+                //     queue.on("fileerror", handleFileError, this);
+                // }
 
-        // function handleComplete(e) {
-        //     console.log('complete', e);
-        //     bannerInit();
-        // }
+                // function handleComplete(e) {
+                //     console.log('complete', e);
+                //     bannerInit();
+                // }
 
-        // function handleError(e) {
-        //   console.log("error", e)
-        // }
-        // function handleFileError(e) {
-        //   console.log("handleFileError", e)
-        // }
-    }
-    </script>
-</head>
-
-<body onload="pageLoadedHandler();">
-    <div id="container_ad">
-        <div id="content_ad">
-            <!-- Your banner ad content goes here -->
-            <div id="remove-me">Build A Banner</div>
-        </div>
-        <button id="background_exit_ad"></button>
-    </div>
-    <script type="text/javascript">
-        // This click thru code looks for a parameter of "clicktag".
-        // It is case insensative so "clickTag", "clickTAG", "ClickTag", etc all work
-        document.getElementById("background_exit_ad").onclick = function() {
-            function getParameterByName(name) {
-              name = name.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
-              var regex = new RegExp("[\\?&]" + name + "=([^&#]*)", 'i'),
-                results = regex.exec(location.search);
-              return results === null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
+                // function handleError(e) {
+                // console.log("error", e)
+                // }
+                // function handleFileError(e) {
+                // console.log("handleFileError", e)
+                // }
             }
-            window.open(getParameterByName("clickTAG"));
-         }
-    </script>
-    <!-- Remove the comment tags around the noscript area below if you would like to include a backup image within your banner build. This isn't typically done, but we've seen it requested by some clients. Doing a back up image this way impacts the K size of your banner build. Instead of doing backups this way, the are typically delivered as a separate standand-alone image. -->
+        </script>
+    </head>
+
+    <body onload="pageLoadedHandler();">
+        <div id="container_ad">
+            <div
+                id="content_ad">
+                <!-- Your banner ad content goes here -->
+                <div id="remove-me">
+                    <div>Build A Banner</div>
+                    <div>Non-Google standard version</div>
+                </div>
+            </div>
+            <button id="background_exit_ad"></button>
+        </div>
+        <script type="text/javascript">
+            // This click thru code looks for a parameter of "clicktag".
+            // It is case insensative so "clickTag", "clickTAG", "ClickTag", etc all work
+            document.getElementById("background_exit_ad").onclick = function () {
+                function getParameterByName(name) {
+                    name = name.replace(/[\[]/, "\\[").replace(/[\]]/, "\\]");
+                    var regex = new RegExp("[\\?&]" + name + "=([^&#]*)", 'i'),
+                        results = regex.exec(location.search);
+                    return results === null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
+                }
+                window.open(getParameterByName("clickTAG"));
+            };
+        </script>
+        <!-- Remove the comment tags around the noscript area below if you would like to include a backup image within your banner build. This isn't typically done, but we've seen it requested by some clients. Doing a back up image this way impacts the K size of your banner build. Instead of doing backups this way, the are typically delivered as a separate standand-alone image. -->
     <!-- You must create a backup image and include it here for users without JS -->
-    <!-- <noscript>
-        <a href="http://example.com"><img src="backupimage.jpg" width="<%= actualBannerWidth %>" height="<%= actualBannerHeight %>"></a>
-    </noscript> -->
-</body>
+        <!-- <noscript>
+                <a href="http://example.com"><img src="backupimage.jpg" width="<%= actualBannerWidth %>" height="<%= actualBannerHeight %>"></a>
+            </noscript> -->
+    </body>
 
 </html>
